# gtk4_dragndrop

./: README.md  meson.build
data/: github.aeldemery.gtk4_dragndrop.gresource.xml
src/: CanvasItem.vala  ColorSwatch.vala  CssButton.vala  Main.vala  MainWindow.vala
